# ai_speaker

./: API  API.md  CMakeLists.txt  Makefile  README.md  build.sh  init.sh
.VSCodeCounter/2025-08-21_16-23-10/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-08-21_16-23-38/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
QtApp/musicApp/: musicApp.pro
QtApp/musicApp/include/: bind.h  player.h  widget.h
QtApp/musicApp/src/: bind.cpp  player.cpp  widget.cpp
QtApp/musicApp/ui/: widget.ui
embedded/: API.md  README.md  init.sh
embedded/include/: player.h
embedded/lib/MPlayer-1.0rc3/: codec-cfg  config.mak  help_mp.h  mencoder.d  mpcommon.d  spudec.d
embedded/src/: device.c  main.c  select.c
embedded/test/: volume.c
include/: device.h  link.h  main.h  player.h  select.h  socket.h
lib/MPlayer-1.0rc3/: codec-cfg.d  command.d  config.h  mplayer.d  version.h
lib/MPlayer-1.0rc3/input/: appleir.d
lib/MPlayer-1.0rc3/liba52/: imdct.d
lib/MPlayer-1.0rc3/libaf/: af_format.d
lib/MPlayer-1.0rc3/libavcodec/: 8bps.d  aac.d  aac_parser.d  aasc.d  ac3_parser.d  alacenc.d  bfi.d  bmp.d  bmpenc.d  cabac.d  cljr.d  cyuv.d  dca.d  dirac_parser.d  dsputil.d  dv.d  dvbsub.d  dvdsubdec.d  dvdsubenc.d  eatgq.d  eatgv.d  elbg.d  error_resilience.d  escape124.d  faanidct.d  fft.d  flicvideo.d  g726.d  gif.d  h261.d  h261dec.d  h264.d  h264pred.d  (+82 more)
server/: Makefile  server
server/inc/: database.h  player.h  server.h
server/src/: database.cpp  main.cpp  player.cpp  server.cpp
src/: device.c  link.c  main.c  player.c  select.c  socket.c
test/: testserver.c
(+415 files in other folders)
